--- a/build.yaml
+++ b/build.yaml
@@ -1,3 +1,9 @@
 include:
   - board: raytac_mdbt50q_rx
     shield: slicemk_ergodox_dongle
+
+on: [push, pull_request, workflow_dispath]
+
+jobs: 
+  build:
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
